--- a/index.html
+++ b/index.html
@@ -2,20 +2,101 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Porn Paradise</title>
+  <title>Porn Paradise — Accès réservé aux majeurs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: linear-gradient(135deg, #000000, #1a1a1a);
+      color: #ffffff;
+      font-family: Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .box {
+      background-color: rgba(0,0,0,0.8);
+      padding: 30px;
+      max-width: 500px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255,0,0,0.3);
+    }
+
+    h1 {
+      margin-top: 0;
+      color: #ff3333;
+    }
+
+    p {
+      font-size: 14px;
+      line-height: 1.5;
+    }
+
+    .buttons {
+      margin-top: 25px;
+    }
+
+    .enter {
+      background-color: #ff3333;
+      color: #fff;
+      padding: 12px 25px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      margin-right: 10px;
+      display: inline-block;
+    }
+
+    .exit {
+      background-color: #444;
+      color: #ccc;
+      padding: 12px 25px;
+      border-radius: 5px;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .enter:hover {
+      background-color: #ff0000;
+    }
+
+    .exit:hover {
+      background-color: #666;
+    }
+
+    footer {
+      margin-top: 20px;
+      font-size: 11px;
+      color: #888;
+    }
+  </style>
 </head>
+
 <body>
 
-  <h1>Bienvenue sur Porn Paradise</h1>
+  <div class="box">
+    <h1>⚠️ Avertissement</h1>
 
-  <p>
-    Ce site est réservé aux personnes majeures (+18).
-  </p>
+    <p>
+      Ce site est réservé exclusivement aux personnes majeures.<br>
+      En cliquant sur <strong>Entrer</strong>, vous certifiez avoir <strong>18 ans ou plus</strong>
+      et accepter de voir du contenu destiné à un public adulte.
+    </p>
 
-  <p>
-    <a href="videos.html">Entrer</a>
-  </p>
+    <div class="buttons">
+      <a href="videos.html" class="enter">Entrer</a>
+      <a href="https://www.google.com" class="exit">Quitter</a>
+    </div>
+
+    <footer>
+      © 2026 Porn Paradise — Accès réservé aux majeurs
+    </footer>
+  </div>
 
 </body>
 </html>
