--- a/videos.html
+++ b/videos.html
@@ -2,68 +2,72 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Vidéos gratuites | Porn Paradise</title>
+  <title>Porn Paradise — Vidéos gratuites</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #0f0f0f;
-      color: #ffffff;
       margin: 0;
-      padding: 0;
+      background-color: #0b0b0b;
+      color: #ffffff;
+      font-family: Arial, sans-serif;
     }
 
     header {
-      background-color: #000000;
+      background-color: #000;
       padding: 15px;
       text-align: center;
+      border-bottom: 2px solid #ff3333;
     }
 
     header h1 {
       margin: 0;
-      font-size: 24px;
+      color: #ff3333;
     }
 
     .container {
       padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
     }
 
-    .warning {
-      background-color: #1c1c1c;
-      border-left: 4px solid red;
-      padding: 15px;
-      margin-bottom: 20px;
-      font-size: 14px;
+    .video-card {
+      background-color: #111;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
 
-    .video-box {
-      margin-bottom: 40px;
-    }
-
-    .video-title {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-
-    iframe {
+    .video-card video {
       width: 100%;
-      max-width: 800px;
-      height: 450px;
-      border: none;
+      height: auto;
+      display: block;
+      background-color: #000;
+    }
+
+    .video-info {
+      padding: 10px;
+    }
+
+    .video-info h3 {
+      margin: 0;
+      font-size: 14px;
+      color: #ff6666;
+    }
+
+    .video-info p {
+      font-size: 12px;
+      color: #aaa;
+      margin: 5px 0 0;
     }
 
     footer {
-      background-color: #000000;
-      color: #888;
       text-align: center;
-      padding: 10px;
-      font-size: 12px;
-    }
-
-    a {
-      color: #ff4444;
-      text-decoration: none;
+      font-size: 11px;
+      color: #777;
+      padding: 15px;
+      border-top: 1px solid #222;
     }
   </style>
 </head>
@@ -71,35 +75,50 @@
 <body>
 
 <header>
-  <h1>Vidéos gratuites</h1>
+  <h1>Porn Paradise</h1>
+  <p>Vidéos gratuites — accès libre</p>
 </header>
 
 <div class="container">
 
-  <div class="warning">
-    ⚠️ Accès réservé aux personnes majeures (+18).  
-    En restant sur ce site, vous confirmez être majeur.
+  <!-- VIDEO 1 -->
+  <div class="video-card">
+    <video controls>
+      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+      Votre navigateur ne supporte pas la vidéo.
+    </video>
+    <div class="video-info">
+      <h3>Vidéo #1</h3>
+      <p>Catégorie : Démo</p>
+    </div>
   </div>
 
-  <div class="video-box">
-    <div class="video-title">Vidéo de démonstration</div>
+  <!-- VIDEO 2 -->
+  <div class="video-card">
+    <video controls>
+      <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
+    </video>
+    <div class="video-info">
+      <h3>Vidéo #2</h3>
+      <p>Catégorie : Démo</p>
+    </div>
+  </div>
 
-    <!-- LECTEUR VIDÉO -->
-    <iframe 
-      src=https://fr.xgroovy.com/videos/655222/2-pretty-skinny-brunette-teens-have-lots-of-4-some-fun-with-their-bfs-after-some-hot-lesbian-teasing/
-      allowfullscreen>
-    </iframe>
-
-    <p>
-      Vidéo intégrée depuis une plateforme externe.  
-      Porn Paradise n’héberge aucun fichier vidéo.
-    </p>
+  <!-- VIDEO 3 -->
+  <div class="video-card">
+    <video controls>
+      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+    </video>
+    <div class="video-info">
+      <h3>Vidéo #3</h3>
+      <p>Catégorie : Démo</p>
+    </div>
   </div>
 
 </div>
 
 <footer>
-  © 2026 Porn Paradise – Vidéos gratuites
+  © 2026 Porn Paradise — Contenu réservé aux majeurs
 </footer>
 
 </body>
