--- a/videos.html
+++ b/videos.html
@@ -69,6 +69,24 @@
       padding: 15px;
       border-top: 1px solid #222;
     }
+    .ad {
+  background-color: #1a1a1a;
+  border: 2px dashed #ff3333;
+  color: #ff3333;
+  text-align: center;
+  font-size: 14px;
+  padding: 15px;
+  margin: 20px 0;
+}
+
+.ad-small {
+  height: 250px;
+}
+
+.ad-top {
+  margin: 20px;
+}
+
   </style>
 </head>
 
